# mahjong-ai-agent

./: .env.example  .gitignore  README.md  main.py  patterns.csv  pyproject.toml  test_display.py  test_toitoi.py
baml/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: mahjong.baml
mahjong_ai_agent/: __init__.py  baml_parser.py  dspy_modules.py  generator.py  optimizer.py  validator.py  verifier.py
tools/: calculator.py  entity.py  exceptions.py
